<resources>
    <string name="app_name">CS360-Project_ALayman</string>
    <string name="weight">Weight (in lbs)</string>
    <string name="date">Date:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="goal_weight">Goal Weight</string>
    <string name="set_goal_weight">Set Goal Weight and Type</string>
    <string name="progress">Progress</string>
    <string name="current_weight">Current Weight</string>
    <string name="date_entered">Date Entered</string>
    <string name="add_weight_entry">Add New Entry</string>
    <string name="edit_weight_entry">Edit Entry</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="weight_tracker">Weight Tracker</string>
    <string name="mobile2app">Mobile2App</string>


    <!-- Strings related to login/registration -->
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>

    <!-- Strings for changing text on the AppBar -->
    <string name="title_login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="goal_lose">Lose</string>
    <string name="goal_gain">Gain</string>
    <string name="delete">Delete</string>
</resources>