<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/login_container"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_tracker"
            android:textSize="50sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/mobile2app"
            android:textStyle="italic"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_centerInParent="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/username"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/password"
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="8dp">

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/create_account"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/txt_login_error"
        style="@style/text_danger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_container"
        android:layout_alignEnd="@id/login_container"
        android:layout_alignStart="@id/login_container"
        android:gravity="center" />
</RelativeLayout>